<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.moviesrubenhita.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.moviesrubenhita.ui.genre.GenerosFragment"
        android:label="@string/menu_genre"
        tools:layout="@layout/fragment_genres" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.moviesrubenhita.ui.buscador.BuscadorFragment"
        android:label="@string/menu_buscador"
        tools:layout="@layout/fragment_buscador" />
</navigation>