<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="10dp"
    android:padding="20dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_margin="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/matrix"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/fechaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fecha"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linearDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <ImageView
                    android:id="@+id/movieImage"
                    android:layout_width="189dp"
                    android:layout_height="189dp"
                    android:layout_margin="1dp"
                    android:contentDescription="@string/movieimage"
                    tools:srcCompat="@tools:sample/avatars" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"/>
            </LinearLayout>

        </LinearLayout>


        <ImageView
            android:id="@+id/smallMovieImage"
            android:layout_width="76dp"
            android:layout_height="63dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/movieimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>